# elden-brain

./: .gitignore  Bosses.txt  README.md  Weapons.txt  config.ini  notes.txt  requirements.txt  setup.cfg
.VSCodeCounter/2022-11-26_19-28-30/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.obsidian/: graph.json
eldenbrain/: __init__.py  cli.py  config.ini  config.py  constants.py  elden_brain.py  objects.py  scraper.py  text_handling.py
src/: config.py  constants.py  elden_brain.py  elden_bring.py  main.py  objects.py  scrape.py  scraper.py  text_handling.py
src/eldenbrain/: config.py  constants.py  elden_brain.py  main.py  objects.py  scraper.py  text_handling.py
tests/: test_unittest.py
