[metadata]
name = eldenbrain
version = 1.0.0
license = GNU General Public License v3.0
description = Parse a certain Elden Ring wiki into a local Obsidian Vault
long_description = file: README.rst
author = Chris Stabb
author_email = chris.stabb@gmail.com
classifiers=
   <classifier 1>
   <classifier 2>
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <requirement 1>
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=src